# assay

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assay/: __init__.py  cli.py  engine.py  models.py  pubmed.py  render.py  science.py  science_cli.py  sources.py  synthesize.py
assay/verticals/: __init__.py  biotech.py
eval/: README.md  scifact_eval.py
tests/: test_adjudication.py  test_biotech.py  test_engine.py  test_parsing.py  test_pubmed.py  test_render.py  test_science.py
