[project]
name = "assay-provenance"
version = "0.1.0"
description = "Provenance diligence for deeptech founders and companies — research lineage, patent ownership, and grant history from public APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
assay = "assay.cli:main"
assay-science = "assay.science_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assay"]
